--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -80,7 +80,7 @@
           <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content">
-          <h3>Full Stack Developer &amp; Entrepreneur.</h3>
+          <h3></h3>
           <p class="fst-italic">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.
@@ -88,18 +88,16 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>23 June 2003</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://darshan-bhandary.netlify.app/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>07 oct 2004</span></l>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mangalore, Karnataka</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>drshnbhandary@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>harshiipoojary@gmail.com</span></li>
               </ul>
             </div>
           </div>
@@ -183,7 +181,7 @@
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>lalalala &amp; wawawa</h4>
+            <h4>B.E &amp; wawawa</h4>
             <h5>2022 - 2024</h5>
             <p><em>A J Institute of Technology, Mangalore</em></p>
             <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
